kubernetes/base/vehicle-login-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vehicle-login-service
  namespace: vehicle-login

spec:
  type: ClusterIP

  selector:
    app: vehicle-login

  ports:
    - port: 80
      targetPort: 8000
